--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Favicon
          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="img/logo.svg">
+  <link rel="icon" href="./img/logo.svg">
 
   <!-- Google icon -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
